Added models and routes

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/anki-scoreboard.css">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+
     {{content-for "head-footer"}}
   </head>
   <body>
@@ -19,6 +25,10 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/anki-scoreboard.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+    </script>
 
     {{content-for "body-footer"}}
   </body>
